--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "main": "./lib/extjs4-autocomplete",
   "version": "0.0.0",
   "description": "A short description of your package",
-  "activationCommands": {
-    "atom-workspace": "extjs4-autocomplete:toggle"
-  },
   "repository": "https://github.com/atom/extjs4-autocomplete",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
   "dependencies": {
+  },
+  "providedServices": {
+     "autocomplete.provider": {
+       "versions": {
+         "2.0.0": "provide"
+       }
+     }
   }
+
 }
