--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "atom": ">0.50.0"
   },
   "dependencies": {
-    "fuzzaldrin": "~1.0.0"
+    "fuzzaldrin": "~1.0.0",
+    "lodash": "^2.4.1"
   },
   "providedServices": {
      "autocomplete.provider": {
