--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "fuzzaldrin": "~1.0.0",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "monet": "0.8.6"
   },
   "providedServices": {
      "autocomplete.provider": {
@@ -19,5 +20,4 @@
        }
      }
   }
-
 }
